@@ -1,4 +1,4 @@
 DIST celluloid-0.15.2-git.tgz 56118 SHA256 7f96b74baf99fb1924a712e7f27b2eca8c28bcc2565b943785f12b03d00703ad SHA512 6f3d781d72f1b298b205d7c64e0353b81c5df20aafe2b054f5e967c01a169bfa4317645e96d86d6cdb08b85de04bb221472d8233fe8e0b0745b125e901d6d213 WHIRLPOOL b3debcf29b2d6bbff7233a711af2e7ab2a8f67ac0878439ad0db2dcf11253c47e56c394f65849761c43fac9205762c1b9b06e985534e2b2f9590ebc63d20b8c4
-EBUILD celluloid-0.15.2-r2.ebuild 986 SHA256 f5a68d033188e9c96a95f823d20a0877621e87e3b099b77ea772537cfd51894f SHA512 9c2a4ffa49279d12155dd3b1dcada2d5db8569eb3e39d8cec3140bb27982adeb0796ee0bdea2de956f9fd42edf2e5d2d81c77ab3b7262756456942d0db6fc505 WHIRLPOOL bc4445b1d6532cd77055341500ba2b6aa4db413d1ac235fdfcccf8a2c48026059b2a6052dd0cac2461535ad843b41ae59fd63764655b6f20c132e01754cc6c91
-MISC ChangeLog 1663 SHA256 1c7d14448b963092334cc8986ec01b870171f72792f65760516d2fcb03d2a7c4 SHA512 5e3c1da321df4afb110742232b8235fc286dd4daaf2f8f2b5953cd1dd84b725f17cea9ed76ddcbd427c9105e0ea901a0c68e532b9895c1fccf1b4cf6f8c53adf WHIRLPOOL 69dddf84cc2e441b4be4d4959eb4dd8e1ecc83d313d45df956bc00e1025ee9c4dd648be4a534b871b92685040f8f2e9ef07aec09188d821f9f938270db7ceca5
+EBUILD celluloid-0.15.2-r2.ebuild 1006 SHA256 7314b69b6373fa842b391195482e862971ebc9000b751ecd41d8d16e68557f31 SHA512 aafa991ae577eb56a55f1fdb051df14707fcb0589bd8b9ebae95581818971a84b290f51d0aa602fe9bfc500f5f5f37034386e75e53cb727667629b2e912b5af4 WHIRLPOOL febb8c67985e6e2f542da0c16da30a5f49530c2aa1e475df9d0c37feff8f76972878e77f033fced18cf1518e14ff45e0fb0e233cd9486ff9f278f7f694c16c3e
+MISC ChangeLog 1796 SHA256 9a090ea2bd8eb7295d27f7a512898a2f5e94c23689048f93be6b35e421653a60 SHA512 69fd0a58c6076e573664f4acfefbdc6bc24089b02b1b4b835c60e3754c988451498b55bb734eb1f1970e8f25e4d2de9085387cc770e6f591be2dd016c2ed35fa WHIRLPOOL 69515e44fdcb9ffdf60cd01c87b1b10fc479e4d687e377699e43ba43a8a223b3501f0790e412e4606c95de5e79ac317f11211c3304cfcc955cd3c74c25bddc70
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
