@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby19] <dev-ruby/timers-3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby20] <dev-ruby/timers-3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby21] <dev-ruby/timers-3[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
 DESCRIPTION=Celluloid provides a simple and natural way to build fault-tolerant concurrent programs in Ruby
 EAPI=5
 HOMEPAGE=https://github.com/celluloid/celluloid
 IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
 KEYWORDS=~amd64 ~ppc ~ppc64
 LICENSE=MIT
-RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby19] <dev-ruby/timers-3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby20] <dev-ruby/timers-3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/timers-1.0.0[ruby_targets_ruby21] <dev-ruby/timers-3[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
 REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
 SLOT=0
 SRC_URI=https://github.com/celluloid/celluloid/archive/v0.15.2.tar.gz -> celluloid-0.15.2-git.tgz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=506b1585ed6f278e8eb0da7409a46525
+_md5_=55bb472e9427c624d5f9690452b42f6a
