@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/celluloid
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/celluloid/ChangeLog,v 1.10 2014/08/27 23:06:40 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/celluloid/ChangeLog,v 1.11 2014/10/08 23:18:55 mrueg Exp $
+
+  08 Oct 2014; Manuel Rüger <mrueg@gentoo.org> celluloid-0.15.2-r2.ebuild:
+  Fix dependency on dev-ruby/timers. Fixes bug #524782.
 
   27 Aug 2014; Manuel Rüger <mrueg@gentoo.org> celluloid-0.15.2-r2.ebuild:
   Add ruby21 target.
